--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ p {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3af4df', endColorstr='#adfacc', GradientType=1);
 }
 
-#thumbs {
+#links {
     width: 540px;
     margin-top: 20px;
     margin-left: auto;
@@ -60,7 +60,7 @@ p {
 
 }
 
-#thumbs a {
+#links a {
     vertical-align: top;
     display: inline-block;
     *display: inline;
