--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
  body {
      background: url(https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e5a31d03ddee66863a599421f792e07b&auto=format&fit=crop&w=1050&q=80);
-     background-size: cover;
+	 background-size: cover;
      background-position: center;
      width: 80%;
      margin-left: auto;
@@ -19,7 +19,7 @@ body,
 html {
     width: 100%;
     height: 100%;
-    font-family: "Lato";
+    font-family: "Monotype";
     color: white;
 }
 
@@ -82,7 +82,7 @@ p {
     text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
     0px 8px 13px rgba(0, 0, 0, 0.1),
     0px 18px 23px rgba(0, 0, 0, 0.1);
-    font-family: Lato;
+    font-family: "Garamond";
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     border-right: .15em solid cyan; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
