Changed cursor to transparent so as to eliminate the distraction.

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ p {
  /* The typewriter cursor effect */
  @keyframes blink-caret {
      from, to { border-color: transparent }
-     50% { border-color: cyan }
+     50% { border-color: 0 }
  }
 
 /* #single_image1 {
